toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__create_missing_config__creates_if_missing_with_custom_options.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(cfg_path).unwrap()"
---
{
  "extends": "../tsconfig.base.json",
  "include": [
    "**/*"
  ],
  "references": []
}
